[tool.poetry]
name = 'ppcg'
version = '0.0.0'
description = 'Programming Puzzles and Code Golf, but mostly puzzles.'
authors = ['Andrew Zhou <0az@afzhou.com>']
license = 'MPL-2.0'

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.poetry.dependencies]
python = '^3.8'

black = {git = 'https://github.com/psf/black.git', rev = '820f387'}
pyperclip = '^1.8.0'

[tool.poetry.dev-dependencies]
flake8 = '^3.8.3'
flake8-bugbear = '^20.1.4'
flake8-pytest-style = '^1.2.2'
hypothesis = '^5.23.3'
isort = '^5.3.0'
mypy = '^0.782'
pre-commit = '^2.6.0'
pyroma = '^2.6'
pytest = '^5.4.3'
vulture = '~1.5'

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
